--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "linkedin-to-json-resume"]
 	path = linkedin-to-json-resume
 	url = https://github.com/swanson8r/linkedin-to-json-resume
+[submodule "DynCodeChallenge"]
+	path = DynCodeChallenge
+	url = https://github.com/swanson8r/DynCodeChallenge
